--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,6 +6,9 @@
 
 // modules
 @import 'module/wrapper';
+@import 'module/title';
+@import 'module/member-list';
+@import 'module/more';
 
 // pages
 @import 'page/index';
