--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -9,6 +9,7 @@
 @import 'module/title';
 @import 'module/member-list';
 @import 'module/more';
+@import 'module/footer';
 
 // pages
 @import 'page/index';
