--- a/src/jade/partial/header.jade
+++ b/src/jade/partial/header.jade
@@ -1,2 +1,5 @@
 header.header
-  h1.title kayac member page
+  h1.header__title kayac web site
+  nav: ul.header__menu
+    li.header__menu__item: a.header__menu__btn.js-menu-top(href="/") news
+    li.header__menu__item: a.header__menu__btn.js-menu-member(href="/member.html") member
