--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,7 +6,7 @@
 
 // modules
 @import 'module/wrapper';
-@import 'module/title';
+@import 'module/header';
 @import 'module/member-list';
 @import 'module/more';
 @import 'module/footer';
