--- a/public/css/style.css
+++ b/public/css/style.css
@@ -91,7 +91,7 @@ table {
   border: solid 3px black;
   transition: border-color 0.2s; }
   .member-list__grid:hover {
-    border-color: red; }
+    border-color: #f00; }
 
 .member-list__grid__img {
   display: block;
@@ -119,7 +119,7 @@ table {
   border: solid 3px black;
   transition: border-color 0.2s; }
   .more:hover {
-    border-color: red; }
+    border-color: #f00; }
 
 .footer {
   background-color: #000;
