--- a/src/scss/module/_member-list.scss
+++ b/src/scss/module/_member-list.scss
@@ -1,6 +1,6 @@
 .member-list {
     overflow: hidden;
-    max-width: 800px;
+    max-width: $max_width;
     margin: 1em auto;
     text-align: center;
 }
