--- a/public/css/style.css
+++ b/public/css/style.css
@@ -73,6 +73,24 @@ table {
     color: #f00;
     font-weight: bold; }
 
+.news-list {
+  overflow: hidden;
+  max-width: 800px;
+  margin: 1em auto; }
+
+.news-list__item {
+  margin: 1em 0em; }
+
+.news-list__btn {
+  display: block;
+  padding: 1em;
+  color: #000;
+  border: solid 3px black;
+  transition: border-color 0.2s; }
+  .news-list__btn:hover {
+    border-color: #f00;
+    color: #f00; }
+
 .member-list {
   overflow: hidden;
   max-width: 800px;
@@ -91,7 +109,8 @@ table {
   border: solid 3px black;
   transition: border-color 0.2s; }
   .member-list__grid:hover {
-    border-color: #f00; }
+    border-color: #f00;
+    color: #f00; }
 
 .member-list__grid__img {
   display: block;
@@ -119,7 +138,8 @@ table {
   border: solid 3px black;
   transition: border-color 0.2s; }
   .more:hover {
-    border-color: #f00; }
+    border-color: #f00;
+    color: #f00; }
 
 .footer {
   background-color: #000;
