--- a/src/scss/_mixin.scss
+++ b/src/scss/_mixin.scss
@@ -1,6 +1,7 @@
 @mixin borderHover {
     border: solid 3px black;
-    transition: border-color 0.2s;
+    transition-property: border-color, color;
+    transition-duration: 0.2s;
     &:hover {
         border-color: $hover_color;
         color: $hover_color;
