--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,6 +7,7 @@
 // modules
 @import 'module/wrapper';
 @import 'module/header';
+@import 'module/main';
 @import 'module/news-list';
 @import 'module/member-list';
 @import 'module/more';
