--- a/src/jade/member.jade
+++ b/src/jade/member.jade
@@ -13,7 +13,7 @@ block ContentBlock
   
   script(type="text/lodash")#template-member
     li.member-list__item
-      a(href!="http://www.kayac.com<%= url %>", target="_blank").member-list__grid
-        img(src!='<%= grid_url %>').member-list__grid__img
-        .member-list__grid__name!= '<%= name %>'
+      a(href!="http://www.kayac.com<%- url %>", target="_blank").member-list__grid
+        img(src!='<%- grid_url %>').member-list__grid__img
+        .member-list__grid__name!= '<%- name %>'
   
