--- a/src/jade/partial/header.jade
+++ b/src/jade/partial/header.jade
@@ -1,5 +1,6 @@
 header.header
-  h1.header__title kayac web site
+  h1.header__title
+    span 面白法人カヤック
   nav: ul.header__menu
     li.header__menu__item: a.header__menu__btn.js-menu-news(href="/") news
     li.header__menu__item: a.header__menu__btn.js-menu-member(href="/member.html") member
