--- a/src/scss/module/_header.scss
+++ b/src/scss/module/_header.scss
@@ -5,8 +5,15 @@
 }
 
 .header__title {
-    font-size: 150%;
-    margin-bottom: 0.5em;
+    margin: auto;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    width: 300px;
+    height: 60px;
+    background-image: image-url("logo.png");
+    span {
+        display: none;
+    }
 }
 
 .header__menu__item {
